# GoogleTakeoutLivePhotosHelper

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_REVIEW.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DISTRIBUTION.md  DONATE.html  FINAL_SETUP_TEMPLATE.md  GITHUB_SETUP.md  IMPROVEMENTS.md  LICENSE  MARKET_ANALYSIS.md  Makefile  PRIVACY.md  README.md  README_SIMPLE.md  RELEASE_CHECKLIST.md  RELEASE_v1.0.0.md  USER_GUIDE.md  google_takeout_live_photos_helper.py  pyproject.toml  requirements-dev.txt  requirements.txt  stage_pairs_flat.py
.github/: FUNDING.yml  topics.txt
.github/workflows/: build-executables.yml  build-simple.yml  ci.yml  ci.yml.disabled  coverage.yml  release-build.yml
docs/: CHANGELOG.md  DEVELOPER_GUIDE.md  EXECUTABLE_GUIDE.md  README.md
scripts/: build_executable.py  build_gui_executable.bat  build_gui_executable.sh  bump_version.py  generate_coverage.py  launch_gui.py  update_coverage_badge.py
src/google_takeout_live_photos/: __init__.py  __main__.py  _version.py  cli.py  gui.py  gui_app.py  processor.py
tests/: __init__.py  test_cli_comprehensive.py  test_gui.py  test_integration.py  test_processor.py  test_processor_comprehensive.py
